--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@primeng/themes": "^21.0.2",
+    "@primeuix/themes": "^2.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^21.0.2",
+    "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
